@@ -24,18 +24,14 @@ import org.apache.tika.metadata.Metadata;
 import org.apache.tika.parser.AutoDetectParser;
 import org.apache.tika.parser.Parser;
 import org.apache.tika.sax.BodyContentHandler;
-import org.junit.Ignore;
 import org.junit.Test;
 import org.xml.sax.ContentHandler;
 
 /**
  * Test case for parsing zlib compressed
- * 
- * Note - currently disabled, pending a fix for COMPRESS-316
  */
 public class ZlibParserTest extends AbstractPkgTest {
     @Test
-    @Ignore
     public void testZlibParsing() throws Exception {
         Parser parser = new AutoDetectParser(); // Should auto-detect!
         ContentHandler handler = new BodyContentHandler();
@@ -60,7 +56,6 @@ public class ZlibParserTest extends AbstractPkgTest {
      *  fired for all the embedded entries.
      */
     @Test
-    @Ignore
     public void testEmbedded() throws Exception {
        Parser parser = new AutoDetectParser(); // Should auto-detect!
        ContentHandler handler = new BodyContentHandler();
